# ZZZ_signal_stats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
front/: package-lock.json  package.json
front/public/: index.html  manifest.json
front/src/: App.css  App.js  ThemeContext.js  setupProxy.js
front/src/components/: DataTable.js  DataTable.jsx  rowStyles.js
src/: back.py  database.py  exceptions.py  get_data.py  process_data.py  save_data.py
src/zzz_signal_stats/: __init__.py
