[project]
name = "zzz-signal-stats"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yakovlevs01", email = "yakovlevs01@yandex.ru" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zzz_signal_stats"]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
extend-include = ["*.ipynb"]
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "S101", "D", "FA", "ANN101", "T201"]
pydocstyle.convention = "google"
