[project]
name = "zzz-signal-stats"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yakovlevs01", email = "yakovlevs01@yandex.ru" }
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "uvicorn>=0.30.6",
    "fastapi>=0.112.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.1",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zzz_signal_stats"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "S101", "D", "FA", "ANN101", "T201"]

fixable = ["ALL"]
line-length = 120
pydocstyle.convention = "google"
